[backend] Import Vulnerabilities from Stix Bundle - Creation inject with targets (#3508)